--- a/src/main/resources/templates/fragments/incapacidad/incapacidadesreport.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidadesreport.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH</title>
+        <title>SISADMRH-Reporte de Empleados con Incapacidades</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
@@ -10,7 +10,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE COMITES</h3>
+            <h3>    </h3>
             <div>
                  <form class="form-horizontal" id="formcomite" th:object="${comites}">
 
