--- a/src/main/resources/templates/fragments/otherreports/personalcapacitadoreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/personalcapacitadoreporte.html
@@ -21,8 +21,13 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-7">
-    <h3 align="center">Generar Estadistico de Personal Capacitado</h3>
-    <br><br><br>
+   <script> Textheader('pnt_reporte_etpc1',document.title);</script>
+<h3></h3>
+<div class="row text-center">
+				<img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
+</div> 
+			
+				<br>
     
         <form class="form-horizontal"  id="form1" > 
           
