--- a/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioempleadoform.html
@@ -2,21 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>Crear beneficio</title>
+    <title>SISADMRH-Asignar Beneficio</title>
   <th:block th:include="../templates/header"></th:block>
   
   </head>
   
 <body>
    
-     
-       <div class="contenedorizq"> <label  >pnt_crbe</label> 
+    <script> Textheader('pnt_crbe',document.title);</script> 
+<!--       <div class="contenedorizq"> <label  >pnt_crbe</label> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div>
+</div>-->
 <div class="row">
      <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
@@ -25,7 +25,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
           <div class="row text-center">
                         <img src="../../static/image/beneficios.png" width="200" th:src="@{/image/beneficios.png}"/>
                     </div>
-        <h3 align="center">Formulario de Beneficios</h3>
+        <h3 align="center"></h3>
   
   
     <div>
