--- a/src/main/resources/templates/fragments/capacitacion/capacitacionesreport.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionesreport.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH</title>
+        <title>SISADMRH-Reporte de Capacitaciones</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
+    <script> Textheader('pnt_reporte_caps1',document.title);</script>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE CAPACITACIONES</h3>
+            <h3>    </h3>
+            <div class="row text-center">
+                <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
+</div> 
             <div>
+                <br>
                 <form class="form-horizontal" id="formcapacitacion" th:object="${capacitaciones}">
 
                    <div class="form-group">
