--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidasform.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidasform.html
@@ -44,13 +44,14 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-    <div class="contenedorizq"><label  >pnt_cem5</label>  
+    <script> Textheader('pnt_cem5',document.title);</script>
+<!--    <div class="contenedorizq"><label  >pnt_cem5</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
@@ -60,7 +61,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
             </div>
-    <h3 align="center">Crear Capacitaciones Recibidas</h3>
+    <h3 align="center">  </h3>
     
 
     
