--- a/src/main/resources/templates/fragments/caparecibidas/caprecibidashow.html
+++ b/src/main/resources/templates/fragments/caparecibidas/caprecibidashow.html
@@ -40,17 +40,19 @@
 }
  </style>
      
-    <title>SISADMRH-Capacitaciones Recibidas</title>
+    <title>SISADMRH-Consulta de Datos de Capacitaciones Recibidas</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-      <div class="contenedorizq"><label  >pnt_cem5_2</label>  
+<!--      <div class="contenedorizq"><label  >pnt_cem5_2</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
+<script> Textheader('pnt_cem5_2',document.title);</script>
+
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
@@ -60,7 +62,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/capacitacion.jpg}"/>
             </div>
-    <h3 align="center">Consulta de Datos de Capacitaciones Recibidas</h3>
+    <h3 align="center"></h3>
     
 
     
@@ -123,7 +125,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         
         <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>
+                        <button type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span>Regresar <a href="#" th:href="@{/empleados/}">.</a></button>
+                        <!--<button type="submit" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>-->
 
                     </div>
                 </div>
