--- a/src/main/resources/templates/fragments/comision/comisionreport.html
+++ b/src/main/resources/templates/fragments/comision/comisionreport.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH</title>
+        <title>SISADMRH-Reporte de Comisiones</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
+    <script> Textheader('pnt_reporte_coms1',document.title);</script>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE BENEFICIOS</h3>
+            <h3></h3>
+            
+<div class="row text-center">
+                <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
+</div> 
             <div>
+                <br>
                 <form class="form-horizontal" id="formcomision">
 
                     <div class="form-group">
