--- a/src/main/resources/templates/fragments/comite/comitesreport.html
+++ b/src/main/resources/templates/fragments/comite/comitesreport.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH</title>
+        <title>SISADMRH-Reporte de Comites</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
+<!--     <div class="contenedorizq">
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>-->
+<script> Textheader('pnt_reporte_comt1',document.title);</script>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE REPORTE DE COMITES</h3>
+            <h3 align="center">
+            </h3>
+            
+<div class="row text-center">
+                <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
+</div> 
             <div>
-                 <form class="form-horizontal" id="formcomite" th:object="${comites}">
+                <br>
+                <form class="form-horizontal" id="formreport" th:object="${comites}">
 
                     <div class="form-group">
                         <label class="col-sm-3 control-label" >Nombre Comite:</label>
@@ -24,7 +38,7 @@
                             <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
-                     <div class="form-group">    
+<!--                     <div class="form-group">    
                         <label class="col-sm-3 control-label">Fecha Inicial:</label>
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="fechainicial" name="fechainicial"/>
@@ -33,9 +47,34 @@
                         <div class="col-sm-3">
                             <input type="text" class="form-control" id="fechafinal" name="fechafinal"/>
                         </div>
+                    </div>-->
+ <div class="form-group">
+                <label class="col-sm-5 control-label">Fecha Desde(*):</label>
+                <div class="col-sm-4">
+                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
+                     <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechainicial" id="fechainicial"  onchange="isDat(this.value,'fechainicial');Fechas(this.value,$('#fechafinal').val().toString(),'fechainicial','fechafinal')"/>
+                </div>
+                 <div class="popup "><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup1')" onmouseout ="javascript:ocultarAyuda('poppup1')">a</a></b>
+                        
+                        <span class="popuptext" id="poppup1">Seleccione o digite la Fecha de inicio para generar el reporte  el formtado debe ser  dia/mes/año .!</span>
                     </div>
-                     <div class="form-group">    
-                         <td><a class="btn btn-default" id="generar">Generar</a></td>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-5 control-label">Fecha Hasta(*):</label>
+                <div class="col-sm-4">
+                    <!--<input type="text" class="form-control" th:field="*{ubicacionpuesto}"/>-->
+                     <input class="form-control fecha_format" placeholder="dia/mes/año" type="text"  name="fechafinal" id="fechafinal" onchange="isDat(this.value,'fechafinal');Fechas($('#fechainicial').val().toString(),this.value,'fechainicial','fechafinal')" />
+                </div>
+                <div class="popup "><b>
+                            <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup2')" onmouseout ="javascript:ocultarAyuda('poppup2')">a</a></b>
+                        
+                        <span class="popuptext" id="poppup2">Seleccione o digite la Fecha de fin para generar el reporte  el formtado debe ser  dia/mes/año .!</span>
+                    </div>
+            </div>
+                     <div class="row" align="center">    
+                         <td><a class="btn btn-danger" id="generar">PDF</a></td>
+                         <td><a class="btn btn-success" id="excel">EXCEL</a></td>
                     </div>
                 </form>
             </div>
@@ -46,17 +85,35 @@
     </div>
 </body>
 <script>
+    function Fechas(val1,val2,val3,val4){
+                        var foo=ValidarFechaReporte(val1,val2,val3,val4).split(",");;
+                        if(foo[0]!=foo[2]){
+                            swal(foo[1], foo[0]);
+                        }
+                    }
+                    
+                    function isDat(val,id){
+                        var foo=ExisteFecha(val,id).split(",");;
+                        if(foo[0]!=foo[2]){
+                            swal(foo[1], foo[0]);
+                        }
+                    }
     $(document).ready(function () {
         $('#fechainicial').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd/mm/yy'
         });
 
         $('#fechafinal').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd/mm/yy'
         });
         $('#generar').click(function(){
-            $("#formcomite").attr('action', '../pdf/' + $("#codigo").val().toString());
-            $("form#formcomite").submit();
+            $("#formreport").attr('action', '../comites/'+ $("#codigo").val().toString());
+            $("form#formreport").submit();
+            
+        });
+         $('#excel').click(function(){
+            $("#formreport").attr('action', '../comitesxls');
+            $("form#formreport").submit();
             
         });
     });
