--- a/src/main/resources/templates/fragments/contrato/contratoshow.html
+++ b/src/main/resources/templates/fragments/contrato/contratoshow.html
@@ -44,13 +44,14 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-      <div class="contenedorizq"><label  >pnt_ce13_2</label>  
+<!--      <div class="contenedorizq"><label  >pnt_ce13_2</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
+<script> Textheader('pnt_ce13_2',document.title);</script>
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
@@ -129,8 +130,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         
         <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>
-
+                        <!--<button type="submit" class="btn btn-default"><a href="#" th:href="@{/empleados/}">Regresar</a></button>-->
+<button type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span>Regresar <a href="#" th:href="@{/empleados/}">.</a></button>
                     </div>
                 </div>
   
