--- a/src/main/resources/templates/fragments/empleado/empleadoform_1.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform_1.html
@@ -44,13 +44,15 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-    <div class="contenedorizq"><label  >pnt_cem1</label>  
+    <script> Textheader('pnt_cem1',document.title);</script>
+<!--    <div class="contenedorizq"><label  >pnt_cem1</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div>-->
+    <br>
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
