--- a/src/main/resources/templates/fragments/empleado/empleados.html
+++ b/src/main/resources/templates/fragments/empleado/empleados.html
@@ -5,13 +5,15 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<div class="contenedorizq"><label  >pnt_cem13</label>  
+    <script> Textheader('pnt_cem13',document.title);</script>
+<!--<div class="contenedorizq"><label  >pnt_cem13</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div>-->
+
 <!--<div class="container">-->
     
     <div th:if="${not #lists.isEmpty(empleados)}" >
@@ -24,7 +26,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
                     </div>
         <!--</div>-->
-        <h3 align="center">Empleados</h3>
+        <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead> 
                 <tr >
