--- a/src/main/resources/templates/fragments/mision/misiones.html
+++ b/src/main/resources/templates/fragments/mision/misiones.html
@@ -5,13 +5,14 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-            <div class="contenedorizq"><label  >pnt_cme</label>  
+    <script> Textheader('pnt_cme',document.title);</script>
+<!--            <div class="contenedorizq"><label  >pnt_cme</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
 <!--<div class="container">-->
     
     
@@ -25,7 +26,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </div> 
         <!--</div>-->
         <div th:if="${not #lists.isEmpty(misiones)}" >
-        <h3 align="center">Listado de Misiones</h3>
+        <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead>
             <tr>
@@ -34,6 +35,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <th>Objetivo de Mimsion</th>
                 <th>Responsable del Gasto </th>
                 <th>Fecha de Salida</th>
+                <th>Fecha de Regreso</th>
                 <th></th>
 		<th></th>
 		<th></th>
