--- a/src/main/resources/templates/fragments/mision/misionshow.html
+++ b/src/main/resources/templates/fragments/mision/misionshow.html
@@ -2,20 +2,21 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>SISADMRH-Detalle de Mision</title>
+    <title>SISADMRH-Consulta de Datos de Mision</title>
      <th:block th:include="../templates/header"></th:block>
  
 
   
 </head>
 <body>
-       <div class="contenedorizq"><label  >pnt_cme</label>  
+<!--       <div class="contenedorizq"><label  >pnt_cme</label>  
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
+<script> Textheader('pnt_cme',document.title);</script>
  <div class="row">
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -24,7 +25,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/mision.png}"/>
             </div>
-    <h3 align="center">Consulta de Datos de Mision</h3>
+    <h3 align="center"></h3>
         <div>
             <form class="form-horizontal">
                  <div class="col-md-6">
@@ -78,8 +79,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             </form>
             <div class="col-md-12">
             <div class="row" align="center">
-                <button type="submit" class="btn btn-default"><a href="#" th:href="@{/misiones/}">Regresar</a></button>
-                
+                <!--<button type="submit" class="btn btn-default"><a href="#" th:href="@{/misiones/}">Regresar</a></button>-->
+                	
+<button type="button" class="btn btn-primary"> <span class="glyphicon glyphicon-arrow-left"></span>Regresar <a href="#" th:href="@{/misiones/}">.</a></button>
             </div>
     </div>
     </div>
