--- a/src/main/resources/templates/fragments/otherreports/comitesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/comitesreport.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH</title>
+        <title>SISADMRH-Reporte de Comites</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-     <div class="contenedorizq">
+<!--     <div class="contenedorizq">
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
+<script> Textheader('pnt_reporte_comt1',document.title);</script>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">GENERACION DE COMITES
+            <h3 align="center">
             </h3>
+            
+<div class="row text-center">
+                <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
+</div> 
             <div>
+                <br>
                 <form class="form-horizontal" id="formreport" th:object="${comites}">
 
                     <div class="form-group">
