--- a/src/main/resources/templates/fragments/otherreports/exoneradoreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/exoneradoreporte.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
     <head lang="en">
-        <title>SISADMRH</title>
+        <title>SISADMRH-Reporte Exonerado de Marcacion</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-     <div class="contenedorizq">
+    <script> Textheader('pnt_reporte_emar1',document.title);</script>
+<!--     <div class="contenedorizq">
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
 
         <div class="col-md-7">
-    <h3 align="center">Generar Reporte de Personal Exonerado de Marcacion</h3>
-    <br><br><br>
+    <h3></h3>
+<div class="row text-center">
+                <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
+</div> 
+            
+                <br>
     
         <form class="form-horizontal"  id="fromreportexonerado" > 
           
