--- a/src/main/resources/templates/fragments/otherreports/pensionadoreporte.html
+++ b/src/main/resources/templates/fragments/otherreports/pensionadoreporte.html
@@ -17,12 +17,17 @@
 <body>
 <!--<div class="container">-->
 <div class="row">
+    <script> Textheader('pnt_reporte_ppen1',document.title);</script>
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-7">
-    <h3 align="center">Generar Reporte de Personal Pensionados</h3>
-    <br><br><br>
+   <h3></h3>
+<div class="row text-center">
+                <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/reportes.png}"/>
+</div> 
+            <div>
+                <br>
     
         <form class="form-horizontal"  id="fromreportpensionado" > 
           
@@ -61,7 +66,7 @@
 
           
         <div class="col-md-12">
-<<<<<<< HEAD
+
        <div class="row" align="center">    
                          <td><a class="btn btn-danger" id="generar">PDF</a></td>
                          <td><a class="btn btn-success" id="excel">EXCEL</a></td>
@@ -70,7 +75,7 @@
             </div>
            </form>
     </div>
-
+ </div>
       <div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
