--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -120,11 +120,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     }
     $(document).ready(function () {
         $('#fdesde').datepicker({
-            dateFormat: 'yy-mm-dd'
+              dateFormat: 'dd/mm/yy'
         });
 
         $('#fhasta').datepicker({
-            dateFormat: 'yy-mm-dd'
+             dateFormat: 'dd/mm/yy'
         });
        
     });
