--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -97,7 +97,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Desde:</label>
                             <div class="col-sm-2">
-                                <input type="text" class="form-control fecha_format"  placeholder="DD/MM/YYYY" required="true" th:field="*{fechadesdecomite}"/>
+                                <input type="text" class="form-control fecha_format"  placeholder="dia/mes/año" required="true" th:field="*{fechadesdecomite}"/>
                             </div>
                               <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechadesde')" onmouseout ="javascript:ocultarAyuda('fechadesde')">a</a></b>
@@ -108,7 +108,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Hasta:</label>
                             <div class="col-sm-2">
-                                <input type="text" class="form-control fecha_format"  placeholder="YYYY-MM-DD" required="true" th:field="*{fechahastacomite}"/>
+                                <input type="text" class="form-control fecha_format"  placeholder="dia/mes/año"required="true" th:field="*{fechahastacomite}"/>
                             </div>
                                <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('fechahasta')" onmouseout ="javascript:ocultarAyuda('fechahasta')">a</a></b>
