--- a/src/main/resources/templates/fragments/puesto/puestoform.html
+++ b/src/main/resources/templates/fragments/puesto/puestoform.html
@@ -35,17 +35,18 @@
 }
  </style>
      
-    <title>SISADMRH-Crear Puesto</title>
+    <title>SISADMRH-Crear Puesto de Trabajo</title>
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-     <div class="contenedorizq"><label  >pnt_cpto</label>
+    <script> Textheader('pnt_cpto',document.title);</script>
+<!--     <div class="contenedorizq"><label  >pnt_cpto</label>
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div><br>
+</div><br>-->
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
@@ -55,7 +56,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/puestos.png}"/>
             </div> 
-    <h3 align="center">Crear Puesto de Trabajo</h3>
+    <h3 align="center">   </h3>
    
         <form class="form-horizontal" th:object="${puesto}" th:action="@{../puesto}" method="post">
             <input type="hidden" th:field="*{codigopuesto}"/>
