--- a/src/main/resources/templates/fragments/puesto/puestoshow.html
+++ b/src/main/resources/templates/fragments/puesto/puestoshow.html
@@ -2,13 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>SISADMRH-Detalle de Puesto</title>
+    <title>SISADMRH-Consulta de Datos de Puesto de Trabajo </title>
      <th:block th:include="../templates/header"></th:block>
  
 
   
 </head>
 <body>
+    <script> Textheader('pnt_cpto2',document.title);</script>
  <div class="row">
  <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
@@ -17,7 +18,7 @@
             <div class="row text-center">
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/puestos.png}"/>
             </div>
-    <h3 align="center">Consulta de Datos de Puesto de Trabajo</h3>
+    <h3 align="center"></h3>
         <div>
             <form class="form-horizontal">
                  <div class="col-md-6">
