--- a/src/main/resources/templates/fragments/puesto/puestos.html
+++ b/src/main/resources/templates/fragments/puesto/puestos.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <title>SISADMRH-Listado de Puestos</title>
+    <title>SISADMRH-Listado de Puestos de Trabajo</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-          <div class="contenedorizq"> 
+<!--          <div class="contenedorizq"> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div>
+</div>-->
+<script> Textheader('pnt_cpto1',document.title);</script>
 <!--<div class="container">-->
     
     <div th:if="${not #lists.isEmpty(puestos)}" >
@@ -24,7 +25,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/puestos.png}"/>
             </div> 
         <!--</div>-->
-        <h3 align="center">Listado de Puestos de Trabajo</h3>
+        <h3 align="center"></h3>
         <table id="tablita" class="table table-striped table-bordered" >
             <thead>
             <tr >
