REPORTES PDF JALANDO DATA

--- a/src/main/resources/templates/fragments/otherreports/constanciaserviciosreport.html
+++ b/src/main/resources/templates/fragments/otherreports/constanciaserviciosreport.html
@@ -79,8 +79,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                          <td><a class="btn btn-default" id="generateWord">word</a></td>
                     </div>-->
  <div class="row" align="center">    
-                         <td><a class="btn btn-danger" id="generar">PDF</a></td>
-                         <td><a class="btn btn-primary" id="excel">WORD</a></td>
+                         <td><a class="btn btn-danger" id="generatePdf">PDF</a></td>
+                         <td><a class="btn btn-primary" id="generateWord">WORD</a></td>
                     </div>
                 </form>
             </div>
