--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -23,7 +23,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                           <br><br>
           <div class="row text-center">
                         <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
-                    <h3 align="center">Listado de Comites</h3>
+<!--                    <h3 align="center">Listado de Comites</h3>-->
                     <table id="tablita" class="table table-striped table-bordered" >
              <thead> 
                         <tr>
