--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -14,7 +14,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Datos de Capacitaciones</h3>
+            <!--<h3 align="center">Consulta de Datos de Capacitaciones</h3>-->
             <div>
                 <form class="form-horizontal">
                   
