--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -14,8 +14,13 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Detalle  del Comite</h3>
+            <!--<h3 align="center">Detalle  del Comite</h3>-->
+            <div class="row text-center">
+                <br>
+                        <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
+            </div>
             <div>
+                <br>
                 <form class="form-horizontal">
                     <div class="col-md-6">
                         <div class="form-group">
@@ -91,19 +96,22 @@
                     </div> 
 
 
-                </form>
+                </form> 
                 <div class="col-md-12">
                     <div class="row" align="center">
-                         <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/comites/}">Reg</a></button>
-
+                        <button type="button" class="btn btn-primary" ><span class="glyphicon glyphicon-arrow-left">Regresar</span><a href="#" th:href="@{/comites/}">Reg</a></button>   
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col-md-12">
+        
+    </div>
+<div class="col-md-12">
             <th:block th:include="../templates/footer"></th:block>
         </div>
-    </div>
 
 </body>
+<script>
+    Textheader('pnt_crco',document.title);
+</script>
 </html>
