--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
@@ -13,8 +13,11 @@
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
         </div>
+         <div class="row text-center">
+                        <img src="../../static/image/costo.png" width="200" th:src="@{/image/costo.png}"/>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Costos de Capacitaciones</h3>
+            
+            <!--<h3 align="center">Consulta de Costos de Capacitaciones</h3>-->
             <div>
                 <form class="form-horizontal">
                     <div class="col-md-6">
@@ -67,4 +70,10 @@
     </div>
 
 </body>
+<script>
+    $(document).ready(function () {
+         Textheader('pnt_cosc',document.title);
+       
+    });
+    </script>
 </html>
