--- a/src/main/resources/templates/fragments/incapacidad/incapacidades.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidades.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
      <th:block th:include="../templates/header"></th:block>
-    <title>Incapacidades</title>
+    <title>Listado de Incapacidades</title>
    
      
     
@@ -23,12 +23,15 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-9">
-           <h3 align="center">Listado de Incapacidades</h3>
+           <!--<h3 align="center">Listado de Incapacidades</h3>-->
+           <div class="row text-center">
+            <img src="../../static/image/asistencia.png" width="100" th:src="@{/image/asistencia.png}"/>
+           </div>
       
          <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
              <thead> 
              <tr>
-                             <th>Codigo Incapacidad</th>
+                             <th>Código Incapacidad</th>
                               <th>Nombre Incapacitado</th>
                             <th>Numero Formulario ISSS</th>
                             <th>DUI</th>
@@ -70,7 +73,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 
                 
                   <td>  <a th:href="${'./show/' + incapacidad.codigoincapacidad}" class="btn btn-info">Mostrar</a></td>
-               <td> <a th:href="${'./edit/' +incapacidad.codigoincapacidad}" class="btn btn-primary">Edit</a></td>
+               <td> <a th:href="${'./edit/' +incapacidad.codigoincapacidad}" class="btn btn-primary">Editar</a></td>
                 <td> <a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${incapacidad.codigoincapacidad} + '\');'" >Eliminar</a></td>
                <!--<td><a th:href="${'./delete/' + capacitacion.codigocapacitacion}" class="btn btn-danger">Delete</a></td>-->
                     <!--<td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitacion.codigocapacitacion} + '\');'" >Delete</a></td>-->  
