--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-    <title>Niveles escolares</title>
+    <title>Lista de Niveles Escolares</title>
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
      <div class="row">     
-    <div class="contenedorizq"> 
+<!--    <div class="contenedorizq"> 
     <label  class="der">
     <script >
 var f = new Date();
 document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 </script></label>
-</div>
+</div>-->
 <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
                     </div>
@@ -23,7 +23,6 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <img src="../../static/image/formacion.png" width="200" th:src="@{/image/formacion.png}"/>
     
     <div th:if="${not #lists.isEmpty(nivelescolaridades)}">
-        <h3 align="center" >Lista de Niveles Escolares</h3>
           <table id="tablita" class="table table-striped table-bordered" style="width:100%" >
              <thead>
             <tr>
@@ -145,6 +144,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         }} );
     });
 	</script>
+        <script>
+    Textheader('pnt_cem4',document.title);
+</script>
         
 </body>
 </html>
