--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 
-    <title>SISADMRH</title>
+    <title>Listado Niveles Escolares</title>
      <th:block th:include="../templates/header"></th:block>
  
 
@@ -15,11 +15,14 @@
     </div> 
         <div class="col-md-8">
             
-           <h3>Niveles Escolares</h3>
+             <br><br>
+          <div class="row text-center">
+                        <img src="../../static/image/formacion.png" width="150" th:src="@{/image/formacion.png}"/>
+                    </div>
         <div>
             <form class="form-horizontal">
                 <div class="form-group">
-              <label class="col-sm-2 control-label">Codigo:</label>
+              <label class="col-sm-2 control-label">Código:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${nivelescolaridad.codigonivelnivelescolaridad}">codigo nivel escolaridad</p></div>
                 </div>
@@ -90,4 +93,7 @@
 
 
 </body>
+     <script>
+    Textheader('pnt_cem4',document.title);
+</script>
 </html>
